Render category links as an HTML list. Bug 12261. Based on patch by Thana & Bergi. It's removing the textual  pipe separator, wrapping the links inside li elements and adding a left 1px border as separator. This makes it much easier to manipulate the list via JS or CSS and is also semantically correct

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -179,6 +179,27 @@ input#wpSummary {
 .magnify { float: right; }
 
 /**
+ * Categories
+ */
+#catlinks ul, #catlinks li {
+	display:inline;
+	margin: 0px;
+	list-style:none;
+	list-style-type:none;
+	list-style-image:none;
+}
+
+#catlinks li {
+	padding: 0 .7em;
+	border-left: 1px solid #AAA;
+}
+
+#catlinks li:first-child {
+	padding-left: .4em;
+	border-left: none;
+}
+
+/**
  * Hidden categories
  */
 .mw-hidden-cats-hidden { display: none; }
